@@ -26,3 +26,4 @@ v<0.0.5>, <12/16/2024> -- feat: added CodeCov and Code Climate badges to README
 v<0.0.5>, <12/16/2024> -- chore: format and linted code
 v<0.0.6>, <12/20/2024> -- chore: unskip huggingface tests
 v<0.0.6>, <12/21/2024> -- chore: switch from pydantic.v1 to pydantic
+v<0.0.6>, <12/21/2024> -- chore: added init tests
